<resources>
    <string name="app_name">Pets for All</string>

    <!-- Labels -->
    <string name="label_email">E-mail:</string>
    <string name="label_password">Senha:</string>
    <string name="label_confirmation">Confirmação da senha:</string>
    <string name="label_name">Nome:</string>
    <string name="label_age">Idade:</string>
    <string name="label_race">Raça:</string>
    <string name="label_gender">Gênero</string>
    <string name="label_species">Espécie:</string>
    <string name="label_description">Descrição:</string>
    <string name="label_dogs">Cães:</string>
    <string name="label_cats">Gatos:</string>
    <string name="label_phone">Telefone:</string>
    <string name="label_distance">Distância máxima:</string>
    <string name="label_time_unit">Unidade:</string>

    <!-- Buttons -->
    <string name="button_signin">Entrar</string>
    <string name="button_signup">Criar conta</string>
    <string name="button_create">Criar</string>
    <string name="button_save">Salvar</string>
    <string name="button_recover_password">Esqueci minha senha</string>
    <string name="button_logout">Sair</string>
    <string name="button_delete_account">Apagar conta</string>

    <!-- Others -->
    <string name="donate">Doar</string>
    <string name="adopt">Adotar</string>
    <string name="profile">Perfil</string>
    <string name="male">Macho</string>
    <string name="female">Fêmea</string>
    <string name="cat">Gato</string>
    <string name="dog">Cão</string>
    <string name="search_for">Mostrar-me</string>
    <string name="edit">Editar</string>
    <string name="adoption_setting">Configuração de adoção</string>
    <string name="contact">Contato</string>
    <string name="title_activity_login">Sign in</string>
    <string name="days">Dias</string>
    <string name="weeks">Semanas</string>
    <string name="months">Meses</string>
    <string name="years">Anos</string>
    <string name="not_implemented">Funcionalidade não implementada nesta versão do aplicativo.</string>
    <string name="empty_donate">Nenhum pet para doação</string>
    <string name="empty_adopt">Nenhum pet para adoção perto de você</string>

    <string-array name="array_gender">
        <item></item>
        <item>@string/female</item>
        <item>@string/male</item>
    </string-array>

    <string-array name="array_species">
        <item></item>
        <item>@string/dog</item>
        <item>@string/cat</item>
    </string-array>

    <string-array name="array_time_unit">
        <item></item>
        <item>@string/days</item>
        <item>@string/weeks</item>
        <item>@string/months</item>
        <item>@string/years</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_create_account">Criar conta</string>
</resources>
